[project]
name = "tinysam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.0",
    "ruff>=0.8.2",
    "tinygrad",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad" }

[tool.ruff]
indent-width = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
